fix img not showing. Remove temp css for icon

--- a/css/learning.css
+++ b/css/learning.css
@@ -4,10 +4,5 @@
 }
 
 #icon{
-    
-    width: 6vw;
-    height: 6vw;
-    line-height: 6vw;
-    text-align: center;
     color: white;
 }
